# pdf2struct

./: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml
docs/: index.md
examples/: demo.py
pdf2struct/: __init__.py  cli.py  extractor.py  kv.py  models.py  ocr.py
tests/: test_import.py
